# librfa

./: .gitignore  CMakeLists.txt  README.md
include/librfa/: rfa.h  rfa_internal.h
src/: rfa.c  rfa_compression.c  rfa_extract.c  rfa_files.c  rfa_internal.c  test.c
